# jqk-python

./: LICENSE  README.md  justfile  pyproject.toml
jqk/: __main__.py
